SP2_48, SP2_46,SP2_47
get location
